--- a/_posts/2019-02-26-csapp.md
+++ b/_posts/2019-02-26-csapp.md
@@ -11,11 +11,12 @@ tags:								#标签
 ---
 
 1. 位级操作，字节级表示
-	- 天地不仁以万物为刍狗
+  - 天地不仁以万物为刍狗
 2. 机器级表示。依赖于具体的硬件。
-	- ISA：指令集体系架构
+  - ISA：指令集体系架构
 3. 处理器
-	- 流水线
+  - 流水线
 4. 程序的性能优化
-	- 在程序的易读性、可解释性、易扩展性和性能之间做平衡。
-	- 从编译器的角度考量，写出易于优化的代码
+  - 在程序的易读性、可解释性、易扩展性和性能之间做平衡。
+  - 从编译器的角度考量，写出易于优化的代码
+  - 选择合适的数据结构和算法
