--- a/_posts/2019-02-26-system.md
+++ b/_posts/2019-02-26-system.md
@@ -14,11 +14,12 @@ tags:								#标签
 
 # 走出新手村
 1. 总结归纳模式。走出舒适圈，找到根本原因，用理性代替情绪。
-	- 提出目标。例如成本函数或者距离度量方法
-	- 根据现实情况，提出多种解决方案
-	- 选出最优方案
-	- 执行
-	- 优化以及维护
+  - 提出目标。例如成本函数或者距离度量方法
+  - 根据现实情况，提出多种解决方案
+  - 选出最优方案
+  - 执行
+  - 优化以及维护
 2. 勇于暴露弱点。在开放的世界中，杂交才会进步。
 3. 思维：整体性，科学性，系统性
 4. 建立个人知识库
+5. 要创新，不要发明。创新是在踏实的基础上。
