--- a/_posts/2019-02-26-csapp.md
+++ b/_posts/2019-02-26-csapp.md
@@ -20,3 +20,25 @@ tags:								#标签
   - 在程序的易读性、可解释性、易扩展性和性能之间做平衡。
   - 从编译器的角度考量，写出易于优化的代码
   - 选择合适的数据结构和算法
+5. 存储器层次结构
+   - 层次性。
+   - 时间和空间上的局部性原理
+6. 链接
+   - 将程序模块化地进行编译，然后组合。
+   - 搞清楚全局变量，静态变量，局部变量的真正内涵
+   - 任务：符号解析，重定位
+7. 异常控制流
+   - 中断，故障，终止，陷阱
+8. 虚拟存储器
+   1. 对主存的一个抽象
+9. 系统级io
+   1. 能读取文件元信息
+
+10. 网络编程
+11. 并发编程
+
+# 内容
+
+1. 应用如何与硬件交互（程序结构和执行）
+2. 应用如何与操作系统交互（在系统上运行程序）
+3. 程序间的交互和通信
