--- a/_posts/2019-03-01-oj-island.md
+++ b/_posts/2019-03-01-oj-island.md
@@ -49,10 +49,11 @@ C:岛屿面积
             }
         }
     
-        // test input
-    //    int pr[3][4] = {{1,1,1,0},
-    //                   {0,1,0,0},
-    //                   {1,1,0,0}};
+        /* test input
+            int pr[3][4] = {{1,1,1,0},
+                          　{0,1,0,0},
+                          　{1,1,0,0}};
+        */
     
         // calculate c
         int tot = 0;
