--- a/_posts/2019-03-02-oj-bignum.md
+++ b/_posts/2019-03-02-oj-bignum.md
@@ -127,8 +127,79 @@ tags:								#标签
             return sumnum;
         }
 
+
+# 乘法（先写出函数，实现大数与一位整数相乘）
+
+    #include<iostream>
+    #include<cmath>
+    #include<string>
+    #include<iterator>
+    #include<algorithm>
+    #include "bignumadd.h"
+    using namespace std;
+    
+    string mulOnepos(string bignum, char smallOne){
+        string res;
+        int curNum=0, lowNum=0, highNum=0;
+    
+    //    reverse(bignum.begin(),bignum.end());
+    
+        for(int i=0;i<bignum.size();i++){
+            curNum = highNum + (bignum[i]-'0')*(smallOne-'0');
+            lowNum = curNum % 10;
+            if(curNum>=10){
+                highNum = curNum / 10;
+            }else{
+                highNum = 0;
+            }
+            res.append(1,lowNum+'0');
+        }
+        if(highNum!=0){
+            res.append(1,highNum+'0');
+        }
+        reverse(res.begin(),res.end());
+        return res;
+    }
+    
+    // big num multiply
+    string bigNumMul(string num1,string num2){
+        // reverse
+        reverse(num1.begin(),num1.end());
+        reverse(num2.begin(),num2.end());
+    
+        // standard-process data
+        string bignum,smallnum,sumnum;
+        if(num1.size()>num2.size()){
+            bignum = num1; smallnum = num2;
+        }else{
+            bignum = num2; smallnum = num1;
+        }
+    
+        // multiply
+        for(int i=0;i<smallnum.size();i++){
+            string tmp = mulOnepos(bignum, smallnum[i]);
+            tmp.append(i,'0');
+    //        cout << i << " : tmp after o-add: " << tmp << endl;
+            sumnum = bigNumAdd(tmp,sumnum);
+    //        cout << i << " : sumnum " << sumnum << endl;
+        }
+    
+    //    reverse(sumnum.begin(),sumnum.end());
+        cout <<  sumnum << endl;
+        return sumnum;
+    }
+    
+    int main(){
+        string num1,num2,sumnum;
+        cin >> num1 >> num2;
+        sumnum = bigNumMul(num1,num2);
+    //    cout << mulOnepos(num1,num2[0]) << endl;
+        return 0;
+    }
 # 知识点
 1. 文本文件是字符均为ascii编码的文件；其余为二进制文件
 2. 注意'0'在char和int之间的作用
 3. 第一步。对输入的数据标准化，明确每个数据/变量的含义、类型，增强代码的可解释性
 4. 测试用例的挑选。选最小的规模的能体现问题所在的用例。一旦出现问题，马上进行分析更改，脑中运行后，再开始run, 节省机器运行时间
+5. 解决问题的思路：搭建步骤框架，解决最小子问题（构建积木），然后搭积木（建大厦）。
+	1. 单元测试和集成测试必不可少
