inc senti-contest

--- a/_posts/2019-03-02-laddder.md
+++ b/_posts/2019-03-02-laddder.md
@@ -14,4 +14,7 @@ tags:								#标签
 2. pc端也要配置
 # 问题
 1. 端口问题，不要用 80 8888 8080 443这些主流端口
-2. 
+2. 网络问题
+   1. 校园网dlut可以pip和conda install成功。但是翻墙速度慢
+   2. 移动网pip一直retrying, 但是可以访问谷歌
+   3. dlut-eda均可
