linux系统和tkinter函数库的中文字体显示问题，grep的使用，linux的目录结构

--- a/_posts/2019-03-02-laddder.md
+++ b/_posts/2019-03-02-laddder.md
@@ -18,3 +18,15 @@ tags:								#标签
    1. 校园网dlut可以pip和conda install成功。但是翻墙速度慢
    2. 移动网pip一直retrying, 但是可以访问谷歌
    3. dlut-eda均可
+
+# 重新安装
+
+vps直接重新安装系统
+
+​	https://www.banpie.info/shadowsocks-pac-gfw/
+
+打开隐藏网址，跑脚本，安装ss
+
+​	https://kiwivm.64clouds.com/main-exec.php?mode=extras_shadowsocks
+
+pc端和手机端可以用二维码分享
