--- a/_posts/2019-03-05-chatbolt.md
+++ b/_posts/2019-03-05-chatbolt.md
@@ -16,3 +16,65 @@ tags:								#标签
 2. 加入数据库存储
 3. 爬虫优化：尝试scrapy框架
 4. 推荐算法设计
+
+# 问题以及解决
+
+## 字体问题
+
+- linux中的python无法正常显示中文。
+
+​	$ cp *.ttf /usr/share/fonts/TTF
+
+​	$ fc-list | grep 
+
+​	$ fc-cache -fv	# 刷新，f表示force, v表示view
+
+- 查看python安装路径
+
+​	python交互环境下：
+
+​		$ import sys
+
+​		$ sys.path
+
+​	catfish搜索
+ 	从anaconda入手搜索
+
+​	一步步$ ls	$ subl3 查看源码文件
+
+- 包可能存在的目录
+
+  /opt/anaconda/lib
+
+  ~/.conda/envs/python36/lib/python3.6/site-packages
+
+  /home/jktian/.conda/envs/python36/lib/python3.6/tkinter/font.py
+
+```python
+# 查看tkinter支持的字体
+from tkinter import *
+import tkinter.font as tkFont
+root = Tk()
+print(tkFont.families())
+```
+
+1. 给linux系统安装中文字体，并找到字体文件的具体位置
+2. 希望在python-tkinter的库函数中直接按照文件名调用字体；未找到代码实现，即使找到了tkinter的源代码
+3. 通过tkinter提供的函数，找到支持的系统字体（即当前平台可用的字体），并筛选出支持中文的字体
+``` python
+font_list = ['sampige','likhan','orya','akrutimal2','droid naskh shift alt','gurbanibolilite','pothana2000','tscu_comic','malotf','tscu_times','sagar','padmaa','akaash'] # 不完全
+```
+
+
+# 几个批量（debug中）
+1. 批量创建函数（无问题，每一个函数确实是不同的）
+2. 批量将按钮和函数关联（由于执行顺序问题，所有按钮都关联到最后一个函数，因为改变了self, 动态类型就是这样）
+> 解决方案：
+> 	- 不要在一个消息类中创建所有联系人。要创建一个联系人类，每个联系人作为一个实例。
+> 	- 本质：类和对象的关系，选择使用要谨慎
+
+
+# conclusion
+1. 不同的图形函数库对跨平台的支持性不同，要选择合适的库进行图形界面的开发。
+	- 可选项：python:tkinter, pyqt
+2. 对于字体的支持。不仅要操作系统支持，还要图形函数库的支持，所以只有.ttf文件是不够的
