--- a/_posts/2019-03-09-anaconda.md
+++ b/_posts/2019-03-09-anaconda.md
@@ -1,4 +1,34 @@
-python
+---
+layout:     post   				    # 使用的布局（不需要改）
+title:      python in linux			# 标题 
+subtitle:  	 
+date:       2019-03-08				# 时间
+author:     jktian 						# 作者
+header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
+catalog: true 						# 是否归档
+tags:								#标签
+    - python
+    - sublime-text-3
+    - linux
+    - anaconda
+---
+# python in linux
+
+$ where is python 	# 找到Python可执行文件的位置
+
+ ~/.conda/envs/python36/bin/python
+
+ # sublime 安装插件
+ 选项卡：preferences ==> package-settings ==> package-control--user
+ 位置：~/.config/sublime-text-3/Packages/User
+ 文件package control.sublime-settings--user: 人工下载channel.json文件
+     "channels":[
+            "/home/jktian/sublime3-channel/channel_v3.json"
+        ],
+
+# anaconda
+
+python36的位置：/home/jktian/.conda/envs/python36/bin/python
 
 # 解决方法
 
