--- a/_posts/2019-03-05-chatbolt.md
+++ b/_posts/2019-03-05-chatbolt.md
@@ -13,9 +13,14 @@ tags:								#标签
 ---
 # 1 TODO	(DONE)	
 1. 重构代码，易扩展性
+
 2. 加入数据库存储
+
 3. 爬虫优化：尝试scrapy框架
+
 4. 推荐算法设计
+
+   [项目地址](https://github.com/ixNeo/ChatRobot)
 
 # 2 问题以及解决
 
