--- a/_posts/2019-03-05-chatbolt.md
+++ b/_posts/2019-03-05-chatbolt.md
@@ -97,7 +97,7 @@ font_list = ['sampige','likhan','orya','akrutimal2','droid naskh shift alt','gur
 - 面向接口编程。先定义接口，假设底层函数已经写好
 
 
-## 2.3 数据库 & 推荐算法设计
+## 2.3 数据库 & 智能回复算法设计
 ### jieba概览
 - 分词模式。精确，全、搜索引擎
 - 关键词以及其权重提取
