--- a/_posts/2019-03-02-laddder.md
+++ b/_posts/2019-03-02-laddder.md
@@ -7,7 +7,7 @@ author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
-    - 翻墙
+    - 科学上网
 ---
 # 流程
 1. 手机用shadowsocks
