--- a/_posts/2016-03-17-sarsa.md
+++ b/_posts/2016-03-17-sarsa.md
@@ -6,16 +6,28 @@ date:       2019-03-20				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 缘因洞--计算机理论
 tags:								#标签
     - 强化学习
 ---
+* content
+{:toc}
 # Q-learning
+
 1. 初始化q-table. row为状态，column为动作．选择动作时，通过找值最大的单元格的列坐标
 2. 更新显示，通过判断是否终止，选择如何显示. time.sleep()
 3. 选取动作：根据epslon>0.9, 随机选取或挑选q-table中最大的动作
 4. 得到下一个状态以及由s_i==>s_{i+1}奖励值．if判断，应该可以从r表中得到
 > 奖励表是先验的，是人为设置的．q-table是动态更新的
 > 奖励是到达某一个状态的值，由到达的状态决定．q-table是联系自身状态得到的综合值
+
+
+
+
+
+
+
+
 
 # Q-learning / SARSA / SARSA(lambda)
 - 同：
