--- a/_posts/2019-02-26-csapp.md
+++ b/_posts/2019-02-26-csapp.md
@@ -6,14 +6,23 @@ date:       2019-02-26 				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 缘因洞--计算机理论
 tags:								#标签
     - csapp
 ---
+* content
+{:toc}
+
 
 1. 位级操作，字节级表示
   - 天地不仁以万物为刍狗
 2. 机器级表示。依赖于具体的硬件。
   - ISA：指令集体系架构
+
+
+
+
+
 3. 处理器
   - 流水线
 4. 程序的性能优化
