--- a/_posts/2019-02-26-database.md
+++ b/_posts/2019-02-26-database.md
@@ -6,25 +6,44 @@ date:       2019-03-20				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 缘因洞--计算机理论
 tags:								#标签
     - database
 ---
+* content
+{:toc}
 # 数据库
+
 oracle数据库有默认的几张表,可以用于练习sql语句的书写
 
 数据类型;
 	char, varchar, date, number
+
+
+
 创建表,  对每个列进行约束:
 	默认值,主键,外键,非空
+
+
+
 增加:
 	insert into <table> values (col1,col2,...)
+
+
+
 删除:
 	drop table <table_name> # 直接删除表的定义,删除结构
 	drop database <database_name>
 	delete * from <table_name> # 删除数据
+
+
+
 改:	
 	alter table student drop age # 更改结构
 	update <table_name> set <col_name>=<value> where ... # 更改数据,中间可以有select语句
+
+
+
 查:
 	select dept_name dname, job
 	from table1, table2
