--- a/_posts/2019-02-27-oj-prime.md
+++ b/_posts/2019-02-27-oj-prime.md
@@ -6,9 +6,12 @@ date:       2019-02-27				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 慧越泉--杂谈日志
 tags:								#标签
     - oj
 ---
+* content
+{:toc}
 
 # 判定给定两个数范围内的素数个数
 
