--- a/_posts/2019-03-01-oj-island.md
+++ b/_posts/2019-03-01-oj-island.md
@@ -6,15 +6,26 @@ date:       2019-03-01				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 慧越泉--杂谈日志
 tags:								#标签
     - oj
 ---
+* content
+{:toc}
+
 
 # 问题描述
 C:岛屿面积
 总时间限制:  1000ms  内存限制:  65536kB
 描述
 用一个n*m的二维数组表示地图，1表示陆地，0代表海水，每一格都表示一个1*1的区域。地图中的格子只能横向或者纵向连接（不能对角连接），连接在一起的陆地称作岛屿，同时整个地图都被海水围绕。假设给出的地图中只会有一个岛屿，并且岛屿中不会有湖（即不会有水被陆地包围的情况出现）。请判断所给定的二维地图中岛屿的周长。
+
+
+
+
+
+
+
 输入
 第一行为n和m，表示地图的大小(1<=n<=100, 1<=m<=100)。接下来n行，每行有m个数，分别描述每一格的数值。数值之间均用空格隔开。
 输出
@@ -28,6 +39,7 @@ C:岛屿面积
 14
 
 # 解决方案
+
     #include<iostream>
     #include<cmath>
     #include<string>
