--- a/_posts/2019-03-02-laddder.md
+++ b/_posts/2019-03-02-laddder.md
@@ -6,13 +6,29 @@ date:       2019-03-01				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 攀天索--工具
 tags:								#标签
     - 科学上网
 ---
+
+* content
+{:toc}
+
+
 # 流程
 1. 手机用shadowsocks
 2. pc端也要配置
+
+
+
+
+
+
+
+
+
 # 问题
+
 1. 端口问题，不要用 80 8888 8080 443这些主流端口
 2. 网络问题
    1. 校园网dlut可以pip和conda install成功。但是翻墙速度慢
