--- a/_posts/2019-03-02-oj-bignum.md
+++ b/_posts/2019-03-02-oj-bignum.md
@@ -6,9 +6,13 @@ date:       2019-03-01				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 慧越泉--杂谈日志
 tags:								#标签
     - oj
 ---
+* content
+{:toc}
+
 
 # 知识点
 1. 文本文件是字符均为ascii编码的文件；其余为二进制文件
@@ -19,7 +23,17 @@ tags:								#标签
 	1. 单元测试和集成测试必不可少
 
 
+
+
+
+
+
+
+
+
+
 # 加法
+
         #include<iostream>
         #include<cmath>
         #include<string>
