--- a/_posts/2019-03-04-db-oracle.md
+++ b/_posts/2019-03-04-db-oracle.md
@@ -6,9 +6,14 @@ date:       2019-03-04				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 缘因洞--计算机理论
 tags:								#标签
     - database
 ---
+
+* content
+{:toc}
+
 # 总结
 1. shell操作。命令行解释器的设置。如提示符样式等
 2. 改变显示界面样式。
