--- a/_posts/2019-03-09-anaconda.md
+++ b/_posts/2019-03-09-anaconda.md
@@ -6,17 +6,31 @@ date:       2019-03-08				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 攀天索--工具
 tags:								#标签
     - python
     - linux
 ---
+* content
+{:toc}
 # python in linux
 
 $ where is python 	# 找到Python可执行文件的位置
 
+
+
  ~/.conda/envs/python36/bin/python
 
+
+
+
+
+
+
+
+
  # sublime 安装插件
+
  选项卡：preferences ==> package-settings ==> package-control--user
  位置：~/.config/sublime-text-3/Packages/User
  文件package control.sublime-settings--user: 人工下载channel.json文件
