--- a/_posts/2019-03-15-webfront.md
+++ b/_posts/2019-03-15-webfront.md
@@ -6,10 +6,14 @@ date:       2019-03-15				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 慧越泉--杂谈日志
 tags:								#标签
     - web
     - campus
 ---
+* content
+{:toc}
+
 
 # 软件开发案例——第一次上机
 > 收获主要是页面布局方面
