--- a/_posts/2019-03-20-nn.md
+++ b/_posts/2019-03-20-nn.md
@@ -4,6 +4,7 @@ title:     神经网络			# 标题
 subtitle:  	 
 date:       2019-03-20				# 时间
 author:     jktian 						# 作者
+category: 缘因洞--计算机理论
 catalog: true 						# 是否归档
 tags:								#标签
     - 神经网络
@@ -12,6 +13,7 @@ tags:								#标签
 
 * content
 {:toc}
+
 # 神经网络
 
 激励函数: elu/relu/linear/prelu/leaky_relu/softplus
