--- a/_posts/2019-02-26-system.md
+++ b/_posts/2019-02-26-system.md
@@ -6,12 +6,17 @@ date:       2019-02-26 				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 慧越泉--杂谈日志
 tags:								#标签
-    - 杂谈
+    - 思维
 ---
 
 
+
+* content
+{:toc}
 # 走出新手村
+
 1. 总结归纳模式。走出舒适圈，找到根本原因，用理性代替情绪。
   - 提出目标。例如成本函数或者距离度量方法
   - 根据现实情况，提出多种解决方案
