--- a/_posts/2019-03-01-data-type.md
+++ b/_posts/2019-03-01-data-type.md
@@ -6,9 +6,12 @@ date:       2019-03-01				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 缘因洞--计算机理论
 tags:								#标签
     - oj
 ---
+* content
+{:toc}
 # cpp
 
 short int  2个字节
