--- a/_posts/2019-03-03-py-tools.md
+++ b/_posts/2019-03-03-py-tools.md
@@ -6,10 +6,12 @@ date:       2019-03-01				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 攀天索--工具
 tags:								#标签
     - python
-    - tools
 ---
+* content
+{:toc}
 
 # requirement.txt文件
 1. 创建
