--- a/_posts/2019-03-05-chatbolt.md
+++ b/_posts/2019-03-05-chatbolt.md
@@ -6,11 +6,14 @@ date:       2019-03-20				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 历劫桥--项目实战
 tags:								#标签
     - log
-    - project
 ---
+* content
+{:toc}
 # 1 TODO	(DONE)	
+
 1. 重构代码，易扩展性
 
 2. 加入数据库存储
@@ -20,6 +23,16 @@ tags:								#标签
 4. 推荐算法设计
 
    [项目地址](https://github.com/ixNeo/ChatRobot)
+
+
+
+
+
+
+
+
+
+
 
 # 2 问题以及解决
 
