--- a/_posts/2019-03-10-git.md
+++ b/_posts/2019-03-10-git.md
@@ -6,15 +6,25 @@ date:       2019-02-26 				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 攀天索--工具
 tags:								#标签
-    - tools
     - git
 ---
+* content
+{:toc}
+
 # 常用命令
 git status
+
 git add .
+
 git commit -m ""
+
 git commit -am ""
+
 git reset --hard HEAD^
+
 git log
+
 git reflog
+
