--- a/_posts/2019-03-20-cpp.md
+++ b/_posts/2019-03-20-cpp.md
@@ -6,11 +6,14 @@ date:       2019-03-15				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
+category: 攀天索--工具
 tags:								#标签
     - cpp
     - oj
 ---
 
+* content
+{:toc}
 # cpp
 
 - 取消科学计数法: 头文件<iomanip>
