--- a/_posts/2019-03-04-db-oracle.md
+++ b/_posts/2019-03-04-db-oracle.md
@@ -2,7 +2,7 @@
 layout:     post   				    # 使用的布局（不需要改）
 title:      python命令＆工具使用			# 标题 
 subtitle:  	 
-date:       2019-03-04				# 时间
+date:       2019-03-27				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
@@ -14,6 +14,8 @@ tags:								#标签
 * content
 {:toc}
 
+20190304
+---
 # 总结
 1. shell操作。命令行解释器的设置。如提示符样式等
 2. 改变显示界面样式。
@@ -25,3 +27,29 @@ tags:								#标签
 	1. 连接数据库，输入密码
 	2. 增删改查
 6. 备份与还原。即脚本的存储和装载
+
+
+
+
+
+
+
+20190327
+---
+# 约束-constraint
+列约束和表约束,
+
+尽量使用表约束
+# 索引
+单索引,符合索引
+
+索引的效率比平常查询高>=2%-4%
+# 权限管理
+
+# 身份认证
+
+# 用户管理
+sys: 
+system:
+scott: 用于测试网络
+public: 创建的任何用户
