--- a/_posts/2019-02-26-database.md
+++ b/_posts/2019-02-26-database.md
@@ -14,8 +14,14 @@ tags:								#标签
 {:toc}
 # 数据库
 
+### 语句类型
+- DDL: 数据库定义语言．对数据库结构的增删改查
+- DML　数据库管理语言．对表内容的增删改查
+- DCL　数据库控制语言．事务，用户等
+- DQL　数据库查询语言
 oracle数据库有默认的几张表,可以用于练习sql语句的书写
 
+### 语句
 数据类型;
 	char, varchar, date, number
 
@@ -55,3 +61,28 @@ oracle数据库有默认的几张表,可以用于练习sql语句的书写
 
 	为表起别名,
 	自查询,多表联合查询,分组查询,嵌套查询(select可以出现在任何地方)
+
+### 查询分类
+1. 子查询
+2. 连接查询
+	- 内连接
+	- 外连接．左连接，右连接
+	- 全连接
+3. 集合查询
+	- union
+	- intersect
+	- minus
+4. 分页查询
+
+#　mysql in manjaro-linux
+使用：　sudo systemctl restart mysqld
+		mysql -u root -p;
+先选择数据库：　use <db>;
+然后开始操作
+
+## command
+desc table_name; 查看表结构
+show databases;
+show tables;
+source file.sql;
+commit;
