--- a/_posts/2019-03-24-english.md
+++ b/_posts/2019-03-24-english.md
@@ -7,7 +7,7 @@ date:       2019-03-24				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
-category: 历劫桥--项目实战
+category: 攀天索--工具
 tags:								#标签
     - english
 
