--- a/_posts/2019-03-10-git.md
+++ b/_posts/2019-03-10-git.md
@@ -2,7 +2,7 @@
 layout:     post   				    # 使用的布局（不需要改）
 title:      git			# 标题 
 subtitle:  	 #副标题
-date:       2019-02-26 				# 时间
+date:       2019-03-28 				# 时间
 author:     jktian 						# 作者
 header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
@@ -28,3 +28,22 @@ git log
 
 git reflog
 
+git checkout -b <branch_name>
+
+
+
+
+# 多人协作
+开发者，需要在仓库的建立者中，仓库settings中进行添加
+
+普通用户，可以提交issue
+
+被开发者认可后，可以被添加为contributor
+
+# git clone
+复制到本地
+- http: 需要用户的用户名和密码即可
+- ssh: 如git clone git@github.com:project/resp . 需要在github远程认证，可能直接拒绝
+
+# fork
+添加对方的仓库到自己的仓库中，可能需要更改.git文件
