--- a/_posts/2019-03-04-db-oracle.md
+++ b/_posts/2019-03-04-db-oracle.md
@@ -45,6 +45,7 @@ tags:								#标签
 
 索引的效率比平常查询高>=2%-4%
 # 权限管理
+创建角色，指定权限
 
 # 身份认证
 
@@ -53,3 +54,7 @@ sys:
 system:
 scott: 用于测试网络
 public: 创建的任何用户
+
+# 概要文件
+举例：
+可以指定输入4次密码后锁定账号，10天后解锁
