--- a/_posts/2019-03-24-english.md
+++ b/_posts/2019-03-24-english.md
@@ -16,7 +16,7 @@ tags:								#标签
 {:toc}
 
 # 口语
-### 考什么
+### content
 自己的基本情况,自己的故事,自己对某时间的看法
 
 q: 
@@ -27,3 +27,12 @@ q:
 - explain what other people thought of it
 
 阅读相关文章,转变为自己的句子,听录音和例句,一个句子15min
+
+# paper word
+- isolate 无关／隔离
+- discrimination 辨别／歧视
+- Latent  潜在的
+
+# NLP顶会
+- ACL 
+- NLPCC
