--- a/_posts/2019-03-29-KBQA-demo.md
+++ b/_posts/2019-03-29-KBQA-demo.md
@@ -11,6 +11,9 @@ tags:								#标签
     - log
     - nlp
     - kg
+---
+
+
 * content
 {:toc}
 
@@ -36,3 +39,10 @@ tags:								#标签
 > - 把sql换为sparql
 > - 把re换为refo
 > - 方便后续的推理。更加符合现实的结构关系。易扩展性
+
+
+# 术语
+1. embedding: 让计算机理解人类语言．数学领域的有名词，是指某个对象 X 被嵌入到另外一个对象 Y 中，映射 f : X → Y ，例如有理数嵌入实数。
+	1. Word Embedding 是NLP中一组语言模型和特征学习技术的总称，把词汇表中的单词或者短语映射成由实数构成的向量上(映射)．一个词是一个向量
+	2. one-hot, n-gram
+	3. word2vec
