--- a/_posts/2019-02-26-database.md
+++ b/_posts/2019-02-26-database.md
@@ -1,6 +1,6 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
-title:     数据库常见操作			# 标题 
+title:     数据库复习			# 标题 
 subtitle:  	 
 date:       2019-04-02				# 时间
 author:     jktian 						# 作者
