--- a/_posts/2019-03-29-NP=P_.md
+++ b/_posts/2019-03-29-NP=P_.md
@@ -1,6 +1,6 @@
 ---
 layout:     post   				    # 使用的布局（不需要改）
-title:      git			# 标题 
+title:      NP=P?			# 标题 
 subtitle:  	 #副标题
 date:       2019-03-28 				# 时间
 author:     jktian 						# 作者
