--- a/_posts/2019-03-24-english.md
+++ b/_posts/2019-03-24-english.md
@@ -15,6 +15,10 @@ tags:								#标签
 * content
 {:toc}
 
+# NLP顶会
+- ACL 
+- NLPCC
+
 # 口语
 ### content
 自己的基本情况,自己的故事,自己对某时间的看法
@@ -32,7 +36,36 @@ q:
 - isolate 无关／隔离
 - discrimination 辨别／歧视
 - Latent  潜在的
-
-# NLP顶会
-- ACL 
-- NLPCC
+- bilingual corpora　双语语料库
+- monolingual 单语的
+- alignment 对齐
+- promising 有前途的
+- glaring 耀眼的
+- defect 缺陷,背叛
+- vital 至关重要的
+- conjecture 推测
+- namely 即,也就是
+- discriminator 鉴别器
+- simultaneously 同时
+- finetune 微调
+- reinforced 增强的
+- extensive 广泛的
+- consistently 一贯地
+- i.e 即,换言之
+- assess 评估,估算
+- enforce 执行,强迫
+- temporal 时间的,世俗的
+- pivot 支点, 中心点
+- scenario 设想,方案,剧情梗概
+- substantial大量的,牢固的,重大的
+- perturbed 烦恼的,不安的
+- incorporate 吸收,包含
+-  concomitant 同时发生的,伴随的
+-  identical完全相同的
+-  emerged显现出的
+-  pseudo伪
+-  perceptron 感知机(模拟大脑的人工网络)
+-  omit 忽略
+-  denote 象征, 标志
+-  Ablation 消除,消融, 腐蚀
+-  Acknowledgements 致谢
