--- a/_posts/2019-04-01-ojtrick.md
+++ b/_posts/2019-04-01-ojtrick.md
@@ -30,6 +30,9 @@ input/process/output
 string.append(index,char);
 
 string的相加操作，需要都是string ,不能是char
+###  io
+流操作基本都是以空格为分隔符
+getline这样的全局函数是自定义分隔符
 
 ### input
 - fgets(string,sizeof(len),stdin) # 只接受len长度的输入，多余部分截断
@@ -74,3 +77,32 @@ string的相加操作，需要都是string ,不能是char
 
 # 内存
 代码区 ==> 数据区 ==> 栈 ==> 堆
+
+# string与char
+> string.push_back(string);
+> string.append(chars);
+```
+#include <string>
+using namespace std;
+...
+        char c = 'A';
+	char* lvlpcStr = "hello";
+	string lvStr,lvSubStr = "sub string";
+	lvStr.push_back(c);
+	lvStr.append(lvlpcStr);
+	lvStr.append(lvSubStr);
+	char lvBuf[100];
+	_itoa_s(1234, lvBuf,10);
+	lvStr.append(lvBuf);
+	cout << lvStr << endl;
+```
+
+# STL
+https://www.cnblogs.com/skyfsm/p/6934246.html
+string
+vector
+set: 有序且唯一
+list: 链表, 有自己的sort函数, 无法使用algorithm的排序算法,因为无法随机访问
+map: key-value, 采用了hash思想, key尽量为string
+1. dict采用了哈希表，最低能在 O(1)时间内完成搜索。同样的java的HashMap也是采用了哈希表实现，不同是dict在发生哈希冲突的时候采用了开放寻址法，而HashMap采用了链接法。
+iterator: 常迭代器, 逆迭代器
