--- a/_posts/2019-05-02-dfs.md
+++ b/_posts/2019-05-02-dfs.md
@@ -17,6 +17,11 @@ tags:								#标签
 > dfs: 定义好最优子结构
 > dp: 要定义好递推公式
 > 做好充分的测试用例, 不然就是在碰运气. 尝试性修改
+
+
+
+
+
 ```
 #include <iostream>
 #include <cmath>
@@ -30,9 +35,9 @@ using namespace std;
 */
 
 const int ROW = 3, COL=3;
-const int map[ROW][COL] = {{0,1,1},
-                           {1,1,1},
-                           {0,1,0}};
+const int map[ROW][COL] = {0,1,1,
+                           1,1,1,
+                           0,1,0};
 
 int dfs(int i, int j, int flag[ROW][COL]){
     flag[i][j] = 1;
@@ -57,9 +62,9 @@ int dfs(int i, int j, int flag[ROW][COL]){
 }
 
 int main(){
-    int flag[ROW][COL] = {{0,0,0},
-                      {0,0,0},
-                      {0,0,0}};
+    int flag[ROW][COL] = {0,0,0,
+                      0,0,0,
+                      0,0,0};
 
     int num = 0;
     for(int i=0;i<ROW;i++){
